# mantly

./: .dockerignore  .env.community.example  .gitignore  .gitleaks.toml  .gitleaksignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Dockerfile.onprem  LICENSE.md  NOTICE.md  PILOT_RUNBOOK.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  brand.json  build.sh  docker-compose.community.yml  docker-compose.dev.yml  docker-compose.onprem.yml  docker-compose.yml  fake_crm_server.py
addin/: .env  (+14 more)
backend/: .coveragerc  .gitignore  config.env.example  pyproject.toml  sitecustomize.py  start.sh
backend/automail/: main.py
backend/pb_migrations/: 10_feedback_intent_name.js  11_intent_learnings.js  12_user_default_project.js  13_phishing_result.js  14_prompt_injection_result.js  15_monitor_runs.js  16_subscription_cancel_at_period_end.js  1784132338_created_intent_actions.js  1784132338_created_intent_attachments.js  1784132338_created_intent_tools.js  1784132338_created_monitor_runs.js  1784132338_created_project_configs.js  1784132338_created_project_intents.js  1784132338_created_support_accounts.js  1784132338_created_support_contacts.js  1784132338_updated_users.js  1784132339_created_intent_learnings.js  1784132339_created_knowledge_articles.js  1784132339_created_llm_usage_events.js  1784132339_created_support_account_insights.js  1784132339_created_support_action_executions.js  1784132339_created_support_agent_messages.js  1784132339_created_support_ai_runs.js  1784132339_created_support_automation_rules.js  1784132339_created_support_automation_runs.js  1784132339_created_support_channel_cursors.js  1784132339_created_support_channel_sync_runs.js  1784132339_created_support_channel_webhook_events.js  1784132339_created_support_channels.js  1784132339_created_support_csat_feedback.js  1784132339_created_support_customer_portal_sessions.js  1784132339_created_support_external_objects.js  (+77 more)
(+517 files in other folders)
